--- a/index.html
+++ b/index.html
@@ -88,9 +88,8 @@
                 },
                 body: JSON.stringify({ email: email })
             })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
+            .then(response => {
+                if (response.status === 200) {
                     messageElement.innerText = '¡Email enviado con éxito!';
                     messageElement.style.color = 'green';
                 } else {
