saco-caracteres-erroneos

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             })
             .then(response => {
                 if (response.status === 200) {
-                    messageElement.innerText = '¡Email enviado con éxito!';
+                    messageElement.innerText = 'Email enviado con exito';
                     messageElement.style.color = 'green';
                 } else {
                     messageElement.innerText = 'Error al enviar el email.';
